# typos-lsp

./: .eslintrc.json  .gitignore  .prettierignore  .release-please-manifest.json  .typos.toml  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  default.nix  eslint.config.mjs  flake.nix  package-lock.json  package.json  release-please-config.json  shell.nix  tsconfig.json
.cargo/: config  config.toml
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: auto-merge.yml  ci.yml  drafter.yml  release-please.yml  release.yml
crates/typos-cli/: Cargo.toml
crates/typos-cli/src/: lsp.rs
crates/typos-lsp/: CHANGELOG.md  Cargo.toml
crates/typos-lsp/src/: config.rs  delme.rs  lib.rs  lsp.rs  main.rs  state.rs  typos.rs  windows.rs
crates/typos-lsp/src/lsp/: ignore_typo_action.rs
crates/typos-lsp/src/typos/: config_file_location.rs  config_file_suggestions.rs
crates/typos-lsp/tests/: custom_typos.toml  integration_test.rs  typos.toml
crates/typos-lsp/tests/common/: mod.rs
crates/typos-lsp/tools/: header.sh  test-reqs.txt  test.txt
crates/typos/src/: dict.rs
docs/: helix-config.md  neovim-lsp-config.md  vim-lsp-settings.md  vscode-settings.md  zed-config.md
src/: extension.ts  lsp.rs
src/test/: runTest.ts
src/test/fixture/: diagnostics.txt
src/test/suite/: diagnostics.test.ts  helper.ts  index.ts  integration.test.ts
tools/: header.sh
