[package]
name = "typos-lsp"
version = "0.1.40"
edition = "2021"
repository = "https://github.com/tekumara/typos-lsp"

[dependencies]
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "smallvec", "std"] }
tower-lsp = "0.20.0"
tracing = "0.1.37"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde_json = "1.0"
anyhow = "1.0"
bstr = "1.12"
itertools = "0.14.0"
env_logger = "0.11.6"
typos = "0.10"
typos-cli = "1.34"
typos-dict = "0.12"
serde = { version = "1.0", features = ["derive"] }
ignore = "0.4.20"
matchit = "0.8.6"
shellexpand = "3.1.1"
regex = "1.11.1"
once_cell = "1.21.3"

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
httparse = "1.10"
similar-asserts = "1.7"
