[package]
name = "typos-lsp"
version = "0.1.47"
edition = "2021"
repository = "https://github.com/tekumara/typos-lsp"

[dependencies]
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "fmt", "smallvec", "std"] }
tower-lsp-server = "0.23"
tracing = "0.1.44"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde_json = "1.0"
anyhow = "1.0"
bstr = "1.12"
itertools = "0.14.0"
env_logger = "0.11.8"
typos = "0.10"
typos-cli = "1.42"
typos-dict = "0.13"
serde = { version = "1.0", features = ["derive"] }
ignore = "0.4.25"
matchit = "0.9.1"
shellexpand = "3.1.1"
regex = "1.12.2"
once_cell = "1.21.3"
toml_edit = "0.23.6"

[dev-dependencies]
test-log = { version = "0.2.19", features = ["trace"] }
httparse = "1.10"
similar-asserts = "1.7"
tempfile = "3.24.0"
